# le-azure-acme-tiny

./: .gitignore  README.md  acme_tiny.py  azure-pipeline-cert-diff.yaml  azure-pipelines-federated.yaml  azure-pipelines.yaml  check_certificate_expiry.py  generate_csr.py  pyproject.toml  requirements-cert-diff.txt  requirements-output.txt  requirements-ubuntu-p38-x86_64.txt  requirements-ubuntu-p39-x86_64.txt
.github/workflows/: build-python.yml
