[tool.poetry]
name = "le-azure-acme-tiny"
version = "0.0.1"
description = ""
authors = ["pp-ps", "pasqualedevita"]
readme = "README.md"
packages = [{include = "le_azure_acme_tiny"}]

[tool.poetry.dependencies]
python = "^3.9"
jwcrypto = "0.8"
cryptography = "3.4.7"
azure-identity = "1.6.0"
azure-mgmt-dns = "8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
